--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ env.php
 # Don't include the error log
 php_error.log
 
+# Don't include Espresso metadata
+mainelearning.net.esproj
+
 # Misc exclusions
 *.bak
 *.sql
