--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ wp-content/blogs.dir/
 wp-content/uploads/*
 wp-content/cache/*
 
-wp-content/backup-db/
+wp-content/backup-db/*
 _archive
 
 # Exclude environment files
@@ -12,11 +12,8 @@ env.php
 # Don't include .htaccess, which causes problems with the dev site
 # .htaccess
 
-# Don't include the error log
-php_error.log
-
 # Don't include the debug log
-wp-content/debug.log
+
 
 # Don't include Espresso metadata
 mainelearning.net.esproj
@@ -24,18 +21,25 @@ mainelearning.net.esproj
 # Misc exclusions
 *.bak
 *.sql
-PHP_errors.log
-error_log
+
 .DS_store
 .DS_Store
-#maintenance.html
+
+error_log
+php_error.log
+PHP_errors.log
+wp-admin/error_log
+wp-content/debug.log
+
 LocalSettings.old*
 wp-content/plugins/custom-anti-spam/cas_*
 *.php.orig
 
-.svn
-wp-admin/error_log
+#maintenance.html
+
 .fseventsd/
+.svn
+
 
 # vim files
 *.swp
