--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,22 @@ env.php
 # Don't include .htaccess, which causes problems with the dev site
 # .htaccess
 
-# Don't include the debug log
+# Don't include supercache configuration files
+
+wp-content/advanced-cache.phpwp-content/wp-cache-config.php
 
 
 # Don't include Espresso metadata
+
 mainelearning.net.esproj
+
+# Don't include the debug log
+
+error_log
+php_error.log
+PHP_errors.log
+wp-admin/error_log
+wp-content/debug.log
 
 # Misc exclusions
 *.bak
@@ -24,12 +35,6 @@ mainelearning.net.esproj
 
 .DS_store
 .DS_Store
-
-error_log
-php_error.log
-PHP_errors.log
-wp-admin/error_log
-wp-content/debug.log
 
 LocalSettings.old*
 wp-content/plugins/custom-anti-spam/cas_*
@@ -40,8 +45,5 @@ wp-content/plugins/custom-anti-spam/cas_*
 .fseventsd/
 .svn
 
-
 # vim files
 *.swp
-
-
