--- a/.htaccess
+++ b/.htaccess
@@ -1,13 +1,16 @@
-
 Options +FollowSymlinks
 RewriteEngine on
-RewriteCond %{REQUEST_URI} !/maintenance.html$
-RewriteCond %{REQUEST_URI} !/wp-content/themes/bp-nelo/_inc/images/bg-header.gif$
-RewriteCond %{REMOTE_HOST} !^67\.243\.140\.73
-RewriteCond %{REMOTE_HOST} !^71\.241\.203\.51
-RewriteCond %{REMOTE_HOST} !^127\.0\.0\.1
-RewriteRule $ /maintenance.html [R=302,L]
 
+
+
+# BEGIN MAINTENANCE BLOCK
+#RewriteCond %{REQUEST_URI} !/maintenance.html$
+#RewriteCond %{REQUEST_URI} !/wp-content/themes/bp-nelo/_inc/images/bg-header.gif$
+#RewriteCond %{REMOTE_HOST} !^67\.243\.140\.73
+#RewriteCond %{REMOTE_HOST} !^71\.241\.203\.51
+#RewriteCond %{REMOTE_HOST} !^127\.0\.0\.1
+#RewriteRule $ /maintenance.html [R=302,L]
+# END MAINTENANCE BLOCK
 
 
 # BEGIN WPSuperCache
